[PC-1076] We are still using Java 11...